Add: Added more tests

--- a/tests/config/common.conf
+++ b/tests/config/common.conf
@@ -7,6 +7,7 @@
 ; environments!
 adminuser=admin
 reselleruser=reseller
+mailusername=easyscp
 
 password=easyscp1
 wrongpassword=easyscp2
@@ -16,6 +17,10 @@ domain1=easyscp.ch
 domain2=easyscp.li
 sub1=sub1
 sub2=sub2
+
+; hosting plans
+templatename='easyscp hosting template'
+
 
 ; other EasySCP settings
 timezone=Europe/Zurich
