fixed some testcases

--- a/tests/config/debian_jessie.conf
+++ b/tests/config/debian_jessie.conf
@@ -1,6 +1,4 @@
 ; This file contains all information to run selenium2 tests using phpunit on Debian 8
-; The URL where your system is reachable
-baseURL=http://dstable.easyscp.ch/
 
 ; The exact string which is used during EasySCP setup to chose OS
 ; possible values:
@@ -13,9 +11,10 @@ baseURL=http://dstable.easyscp.ch/
 ; - 'Ubuntu 16.04 LTS'
 hostos='Debian GNU/Linux 8 (Jessie)'
 
-host=dstable.easyscp.ch
+baseURL=http://jessie.easyscp.ch/
+host=jessie.easyscp.ch
 database=easyscp
 dbport=3306
 dbuser=root
 dbpassword=easyscp
-ip=192.168.230.10
+ip=192.168.230.14
